Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@
 
  variables:
    imageName: 'pipelines-javascript-docker'
-   dev_environment: $(dev_environment)
+   dev_environment: 'dev'
  steps:
  - task: Docker@2
    displayName: Build an image
