--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,35 +1,19 @@
-# Docker
-# Build a Docker image
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
-trigger:
-- main
-
-resources:
-- repo: self
-
-variables:
-  tag: '$(Build.BuildId)'
-
-stages:
-- stage: Build
-  displayName: Build image
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: ubuntu-latest
-      name: Azure Pipelines
-    steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/app/Dockerfile'
-        tags: |
-          $(tag)
-- stage: Deploy
-  displayName: Deploy image
-  jobs:
-  - job: Deploy
-    displayName: Deploy
+jobs:
+- deployment:
+  environment: dev
+  pool:
+    name: sh-prod-pool
+  strategy:                 
+    runOnce:            
+      deploy: 
+        steps:       
+        - script: kubectl apply ... 
+- deployment: deployDB
+  environment: dev
+  pool:
+    name: sh-prod-pool
+  strategy:                 
+    runOnce:
+      deploy: 
+        steps:       
+        - script: kubectl apply ... 
