testing new pool

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -2,7 +2,7 @@ jobs:
 - deployment:
   environment: dev
   pool:
-    name: Azure Pipelines
+    name: Staging
   strategy:                 
     runOnce:            
       deploy: 
