--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,5 +1,5 @@
 jobs:
-- deployment:
+- deployment:Build
   environment: dev
   pool:
     name: Staging
@@ -9,8 +9,10 @@ jobs:
         steps:       
         - script: hostname
 
-- deployment: deployDB
+- deployment: Deploy
   environment: dev
+    pool:
+    name: Staging
   strategy:                 
     runOnce:
       deploy: 
