--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,4 @@
 jobs:
-- deployment: Build
-  environment: dev
-  pool:
-    name: Staging
-  strategy:                 
-    runOnce:            
-      deploy: 
-        steps:       
-        - script: hostname
-
 - deployment: Deploy
   environment: dev
   pool:
@@ -18,7 +8,8 @@ jobs:
       deploy: 
         steps:       
         - script: |
-           hostname
+           cd /home/dorset/geosolutions/docker-nginx-hello-world
+           docker run -p 3333:9090 -d dockerbogo/docker-nginx-hello-world
            docker ps
           displayName: Testing again
 
