--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,19 @@
-jobs:
-- deployment: Deploy
-  environment: Live
-  pool:
-    name: Live Cluster
-  strategy:                 
-    runOnce:
-      deploy: 
-        steps:       
-        - script: |
-           hostname
-           docker ps
-          displayName: Testing live cluster
+ stages:
+   - stage: DeployLive
+     displayName: Deploy to Live
+     jobs:
+       - deployment: Deploy
+         environment: Live
+         pool:
+          name: Live Cluster
+         strategy:                 
+          runOnce:
+            deploy: 
+              steps:       
+            - script: |
+                hostname
+                docker ps
+                 
+              displayName: Testing live cluster
+
 
