Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ stages:
     displayName: Deploylive
     jobs:
     - deployment: Deploy
-      environment: Live
+      environment: Live.vchgisliveapp2
       strategy:                 
         runOnce:
           deploy: 
