--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ stages:
     - deployment: Deploy
       environment:
        name: Live
-       resourceType: VirtualMachine
+       resourceName: vchgisliveapp3
        tags: Console
       strategy:                 
         runOnce:
