--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,7 @@ stages:
       environment:
        name: Live
        resourceName: vchgisliveapp3
+       resourceType: VirtualMachine
        tags: Console
       strategy:                 
         runOnce:
