Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,9 +5,7 @@ stages:
     displayName: Deploylive
     jobs:
     - deployment: Deploy
-      environment:
-       name: Live
-       resourceType: vchgisliveapp3
+      environment: geosoltest
       strategy:                 
         runOnce:
           deploy: 
