Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,5 +15,6 @@ stages:
             steps:       
             - script: |
                hostname
+               date
                docker ps
               displayName: Testing live cluster
