Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,8 @@ stages:
        name: Live
        resourceType: VirtualMachine
       strategy:                 
-        runOnce:
+        rolling:
+          maxParallel: 1
           deploy: 
             steps:       
             - script: |
