Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ stages:
                hostname
                date
                whoami
+               cd /home/dorset/docker-geoserver
                ls -al /home/dorset
                docker ps
               displayName: Testing live cluster
