--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,6 @@ stages:
                date
                whoami
                find /home/dorset/ -name docker-compose.yml
-               cd /home/dorset/docker-geoserver
-               ls -al /home/dorset
+               ls -al /home/dorset/docker-geoserver/
                docker ps
               displayName: Testing live cluster
