--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ stages:
                date
                whoami
                find /home/dorset/ -name docker-compose.yml
-               cat /home/dorset/docker-geoserver/docker-compose.yml
+               cat /home/dorset/docker-geoserver/.env
                ls -al /home/dorset/docker-geoserver/
                docker ps
               displayName: Testing live cluster
