--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,8 @@ stages:
             - script: |
                hostname
                date
-               docker ps
+               cd /home/dorset/geosolutions/
+               git clone https://jovg65mehr5gj3h6e4sjezzhgvzeljnxwu2jbc5c4dmhsz5ckvrq:3RDP.GEOSOLUTIONS@dev.azure.com/dccgisvsts/Docker%20Configuration/_git/Docker%20Configuration
+               cd Docker%20Configuration/
+               git status
               displayName: Testing live cluster
