--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,10 +17,12 @@ stages:
             - script: |
                hostname
                date
-               mkdir /home/dorset/geosolutions/
+               mkdir -p /home/dorset/geosolutions/
                cd /home/dorset/geosolutions/
                rm -rf /home/dorset/geosolutions/Docker%20Configuration/
                git clone https://jovg65mehr5gj3h6e4sjezzhgvzeljnxwu2jbc5c4dmhsz5ckvrq:3RDP.GEOSOLUTIONS@dev.azure.com/dccgisvsts/Docker%20Configuration/_git/Docker%20Configuration
                cd Docker%20Configuration/
+               git checkout master
                git status
+               ls -al
               displayName: Testing live cluster
