--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,7 @@ stages:
                rm -rf /home/dorset/geosolutions/Docker%20Configuration/
                git clone https://jovg65mehr5gj3h6e4sjezzhgvzeljnxwu2jbc5c4dmhsz5ckvrq:3RDP.GEOSOLUTIONS@dev.azure.com/dccgisvsts/Docker%20Configuration/_git/Docker%20Configuration
                cd Docker%20Configuration/
+               git fetch --all
                git checkout master
                git status
                cat .gitignore
