Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,8 +8,8 @@ jobs:
       deploy: 
         steps:       
         - script: |
-           cd /home/dorset/geosolutions/docker-nginx-hello-world
-           docker run -p 3333:9090 -d dockerbogo/docker-nginx-hello-world
+           hostname
+           date
            docker ps
-          displayName: Testing again
+          displayName: Testing
 
