--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,8 +9,7 @@ stages:
        name: dev
        resourceType: VirtualMachine
       strategy:                 
-        rolling:
-          maxParallel: 1
+        runOnce:
           deploy: 
             steps:       
             - script: |
